this commit fixes some minor styling with the footer overlapping content in panel

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 80vh;
   background-color: hsl(234, 29%, 20%);
 }
 
@@ -104,8 +104,6 @@ footer {
   position: fixed;
   bottom: 0;
   color: white;
-  /* font-family: Roboto-Regular; */
-  padding: 15px;
 }
 
 @font-face {
